--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -10965,6 +10965,14 @@ xnnpack_benchmark(
 )
 
 xnnpack_benchmark(
+    name = "xx_transpose_bench",
+    srcs = [
+        "bench/xx-transpose.cc",
+    ],
+    deps = MICROKERNEL_BENCHMARK_DEPS,
+)
+
+xnnpack_benchmark(
     name = "x8_transpose_bench",
     srcs = [
         "bench/x8-transpose.cc",
