QC8 1x8 GEMM for Cortex A35
- 1x8 GEMM for AArch32 adapted from 4x8
- QC8, QS8 and QU8 data types
- QC8 neon for Cortex A7 and neonv8 for Cortex A35
- prfm for Cortex A7, A53, and A57 and non-prfm for A35 and A55
- 2 sets of accumulators to reduce FMLA stalls
- reduced pushes - r4, r6, r8 and r10 unused

PiperOrigin-RevId: 447788479

--- a/test/qc8-gemm-minmax-fp32.yaml
+++ b/test/qc8-gemm-minmax-fp32.yaml
@@ -4,6 +4,10 @@
 # LICENSE file in the root directory of this source tree.
 
 # AArch32 assembly
+- name: xnn_qc8_gemm_minmax_fp32_ukernel_1x8__aarch32_neon_mlal_lane_cortex_a7
+  init: xnn_init_qs8_minmax_neon_params
+  k-block: 8
+  assembly: true
 - name: xnn_qc8_gemm_minmax_fp32_ukernel_4x8__aarch32_neon_mlal_lane_cortex_a7
   init: xnn_init_qs8_minmax_neon_params
   k-block: 8
@@ -13,6 +17,10 @@
   k-block: 8
   assembly: true
 - name: xnn_qc8_gemm_minmax_fp32_ukernel_4x8__aarch32_neon_mlal_lane_ld64
+  init: xnn_init_qs8_minmax_neon_params
+  k-block: 8
+  assembly: true
+- name: xnn_qc8_gemm_minmax_fp32_ukernel_1x8__aarch32_neon_mlal_lane_prfm_cortex_a7
   init: xnn_init_qs8_minmax_neon_params
   k-block: 8
   assembly: true
@@ -28,6 +36,10 @@
   init: xnn_init_qs8_minmax_neon_params
   k-block: 8
   assembly: true
+- name: xnn_qc8_gemm_minmax_fp32_ukernel_1x8__aarch32_neonv8_mlal_lane_cortex_a35
+  init: xnn_init_qs8_minmax_neonv8_params
+  k-block: 8
+  assembly: true
 - name: xnn_qc8_gemm_minmax_fp32_ukernel_4x8__aarch32_neonv8_mlal_lane_cortex_a35
   init: xnn_init_qs8_minmax_neonv8_params
   k-block: 8
@@ -37,6 +49,10 @@
   k-block: 8
   assembly: true
 - name: xnn_qc8_gemm_minmax_fp32_ukernel_4x8__aarch32_neonv8_mlal_lane_ld64
+  init: xnn_init_qs8_minmax_neonv8_params
+  k-block: 8
+  assembly: true
+- name: xnn_qc8_gemm_minmax_fp32_ukernel_1x8__aarch32_neonv8_mlal_lane_prfm_cortex_a35
   init: xnn_init_qs8_minmax_neonv8_params
   k-block: 8
   assembly: true
