--- a/test/qs8-gemm-minmax-rndnu.yaml
+++ b/test/qs8-gemm-minmax-rndnu.yaml
@@ -4,6 +4,10 @@
 # LICENSE file in the root directory of this source tree.
 
 # AArch32 assembly
+- name: xnn_qs8_gemm_minmax_rndnu_ukernel_1x8__aarch32_neon_mlal_lane_cortex_a7
+  init: xnn_init_qs8_conv_minmax_rndnu_neon_params
+  k-block: 8
+  assembly: true
 - name: xnn_qs8_gemm_minmax_rndnu_ukernel_4x8__aarch32_neon_mlal_lane_cortex_a7
   init: xnn_init_qs8_conv_minmax_rndnu_neon_params
   k-block: 8
@@ -13,6 +17,10 @@
   k-block: 8
   assembly: true
 - name: xnn_qs8_gemm_minmax_rndnu_ukernel_4x8__aarch32_neon_mlal_lane_ld64
+  init: xnn_init_qs8_conv_minmax_rndnu_neon_params
+  k-block: 8
+  assembly: true
+- name: xnn_qs8_gemm_minmax_rndnu_ukernel_1x8__aarch32_neon_mlal_lane_prfm_cortex_a7
   init: xnn_init_qs8_conv_minmax_rndnu_neon_params
   k-block: 8
   assembly: true
